feat(hyperpaas-starter): Added new cmd
